--- a/login.html
+++ b/login.html
@@ -33,6 +33,7 @@
                 <div class="bottom-link">
                     Don't have an account?
                     <a href="index.html">Signup</a>
+              <a href="login.html">Dashboard</a>
                 </div>
             </div>
         </div>
