--- a/login.html
+++ b/login.html
@@ -1,29 +1,41 @@
-<form id="login-form">
-    <div class="input-field">
-        <input type="text" required id="email">
-        <label>Email</label>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <div class="blur-bg-overlay"></div>
+    <div class="form-popup">
+        <div class="form-box login">
+            <div class="form-details">
+                <h2>Welcome Back</h2>
+                <p>Please log in using your personal information to stay connected with us.</p>
+            </div>
+            <div class="form-content">
+                <h2>LOGIN</h2>
+                <form action="dashboard.html">
+                    <div class="input-field">
+                        <input type="text" required>
+                        <label>Email</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" required>
+                        <label>Password</label>
+                    </div>
+                    <a href="#" class="forgot-pass-link">Forgot password?</a>
+                    <button type="submit">Log In</button>
+                </form>
+                <div class="bottom-link">
+                    Don't have an account?
+                    <a href="index.html">Signup</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="input-field">
-        <input type="password" required id="password">
-        <label>Password</label>
-    </div>
-    <a href="#" class="forgot-pass-link">Forgot password?</a>
-    <button type="submit">Log In</button>
-</form>
-
-<script>
-    const loginForm = document.getElementById('login-form');
-
-    loginForm.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        // Validate the credentials here
-        if (email && password) {
-            window.location.href = 'dashboard.html';
-        } else {
-            alert('Invalid credentials');
-        }
-    });
-                               </script>
+</body>
+</html>
