--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <title>Login Form</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="blur-bg-overlay"></div>
@@ -20,12 +19,12 @@
                 <h2>LOGIN</h2>
                 <form action="dashboard.html">
                     <div class="input-field">
-                        <input type="text" required>
-                        <label>Email</label>
+                        <input type="text" id="email" required>
+                        <label for="email">Email</label>
                     </div>
                     <div class="input-field">
-                        <input type="password" required>
-                        <label>Password</label>
+                        <input type="password" id="password" required>
+                        <label for="password">Password</label>
                     </div>
                     <a href="#" class="forgot-pass-link">Forgot password?</a>
                     <button type="submit">Log In</button>
@@ -37,5 +36,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js" defer></script>
 </body>
 </html>
